src: project-styles: insights: custom: print: avoid page breaks, not display input and hide overflow

--- a/src/project-styles/insights/custom.scss
+++ b/src/project-styles/insights/custom.scss
@@ -133,6 +133,18 @@ ul.dataset-select>li {
     margin: 0;
 }
 
+@media print {
+    .base-card {
+        page-break-inside: avoid;
+    }
+    input {
+        display: none
+    }
+    .bar-chart {
+        overflow: hidden;
+    }
+}
+
 /* tags */
 
 .tags {
